--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ body {
 
     
     <header class="profile-header">
-      <img src="./Garena  Free fire.jpg" alt="Profile Picture" class="profile-pic">
+      <img src="./garena.jpg" alt="Profile Picture" class="profile-pic">
       <div class="profile-info" ;>
         <h2>RAHUL_REMAN_1818</h2>
         <p>5 posts • 500 followers • 300 following</p>
@@ -119,3 +119,4 @@ body {
 
 </body>
 </html>
+
