--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ body {
       <div>
         <img src="./Ak47 evolutiva.jpg" alt="post">
         <img src="./Cobra MP40.jpg" alt="post">
-        <img src="./Free fire evo guns skins.jpg" alt="post">
+        <img src="./ff.jpg" alt="post">
       </div>
 
       <div>
@@ -119,4 +119,5 @@ body {
 
 </body>
 </html>
+
 
